Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ghost-cms-pod
  name: ghost-cms-pod
  # namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost-cms-pod
  strategy: {}
  template:
    metadata:
      labels:
        app: ghost-cms-pod
    spec:
      containers:
      - image: ghost
        name: ghost
        ports:
          - containerPort: 2368
            protocol: TCP
        resources: {}
        volumeMounts:
          - name: config-vol
            mountPath: /var/lib/ghost/content
      
      volumes:
        - name: config-vol
          persistentVolumeClaim:
             claimName: ghost-cms-pvc
