Kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  ghost-cms-service
spec:
  selector:
    app: ghost-cms-pod
  type: ClusterIP
  ports:
  - name: ghost-port
    port: 8080
    protocol: TCP
    targetPort: 2368
