Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-cms-ingress
  annotations:
    cert-manager.io/cluster-issuer: production-app
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "INGRESSCOOKIE" 
    nginx.ingress.kubernetes.io/session-cookie-path: "/"         

spec:
  ingressClassName: nginx
  rules:
  - host: bitofcloud.joakim.online   # Enter Domain name of LoadBalancer Here if no Domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ghost-cms-service
            port:
              number: 8080
  tls:
  - hosts:
    - bitofcloud.joakim.online     # Enter Domain name of LoadBalancer Here if no domain
    secretName: app
